--- a/index.htm
+++ b/index.htm
@@ -156,7 +156,7 @@
 				<img src="img/iali76.gif" tppabs="img/iali76.gif" />
 			</div>
 			<div id="/section-5/page-7" class="ft-page page-31" data-id="page-7">
-				<h3 id="text-34" contenteditable="true">再然后，姬蔚萍会开始学习她的技能</h3>
+				<h3 id="text-34" contenteditable="true">再然后，常志伟会开始学习他的技能</h3>
 				<img src="img/iali77.jpg" tppabs="img/iali77.jpg" />
 			</div>
 		</div>
@@ -173,7 +173,7 @@
 				<h3 id="text-37" contenteditable="true">然后在同一个站台，高高兴兴的一起上班</h3>
 			</div>
 			<div id="/section-6/page-4" class="ft-page page-35" data-id="page-4">
-				<h3><span id="text-38" contenteditable="true">常志伟会感觉自己好幸福。</span><br /><span id="text-39" contenteditable="true">因为自己有了家</span><br /><span id="text-40" contenteditable="true">那个有XX在的地方</span></h3>
+				<h3><span id="text-38" contenteditable="true">常志伟会感觉自己好幸福。</span><br /><span id="text-39" contenteditable="true">因为自己有了家</span><br /><span id="text-40" contenteditable="true">那个有姬蔚萍在的地方</span></h3>
 				<img src="img/iali8.gif" tppabs="img/iali8.gif" />
 			</div>
 			<div id="/section-6/page-5" class="ft-page page-36 full-img" data-id="page-5">
@@ -201,10 +201,10 @@
 			<div id="/section-7/page-3" class="ft-page page-41" data-id="page-3">
 				<img src="img/iali30_1.jpg" tppabs="img/iali30_1.jpg" class='img1'/>
 				<img src="img/iali30_2.jpg" tppabs="img/iali30_2.jpg" class='img2'/>
-				<h3 id="text-46" contenteditable="true"> XX又怎会飞的更高更远</h3>
+				<h3 id="text-46" contenteditable="true"> 常志伟又怎会飞的更高更远</h3>
 			</div>
 			<div id="/section-7/page-4" class="ft-page page-42" data-id="page-4">
-				<h3><span id="text-47" contenteditable="true">常志伟不想这样。他要为姬蔚萍改变自己</span><br /><span id="text-48" contenteditable="true">XX不知道XX喜欢什么，但他一定会满足她的一切。</span></h3>
+				<h3><span id="text-47" contenteditable="true">常志伟不想这样。他要为姬蔚萍改变自己</span><br /><span id="text-48" contenteditable="true">常志伟不知道姬蔚萍喜欢什么，但他一定会满足她的一切。</span></h3>
 				<img src="img/iali69.jpg" tppabs="img/iali69.jpg"  />
 			</div>
 			<div id="/section-7/page-5" class="ft-page page-43" data-id="page-5">
@@ -235,7 +235,7 @@
 				<h3>
 					<span id="text-58" contenteditable="true">想想未来他们或许</span>
                     <span id="text-59" contenteditable="true">会有一辈子</span>
-					<span id="text-59" contenteditable="true">XX好开心</span>
+					<span id="text-59" contenteditable="true">常志伟好开心</span>
 					<span id="text-60" contenteditable="true">或许他可以和姬蔚萍一起</span>
 					<span id="text-61" contenteditable="true">去全世界好多地方玩</span></h3>
 				
@@ -282,7 +282,7 @@
 				<p class="text">
 					<span id="text-73" contenteditable="true">我相信，常志伟和姬蔚萍的故事会一直继续下去。</span><br />
 					<span id="text-74" contenteditable="true">无论精彩、平淡都会是他们喜欢的。</span><br />
-                    <span id="text-74" contenteditable="true">XXX，我爱你</span><br />
+                    <span id="text-74" contenteditable="true">姬蔚萍，我爱你</span><br />
 					<br />
 					<br />
 					<span> -- 按“Esc"键有惊喜</span>
