--- a/index.htm
+++ b/index.htm
@@ -20,14 +20,14 @@
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<meta name="author" content="DSX,工科男表白,浪漫表白,表白网站">
 	<meta name="description" content="这是常志伟为姬蔚萍表白制作的表白网站">
-	<title>XXX LOVE XXX</title>
+	<title>常志伟 LOVE 姬蔚萍</title>
 	<link rel="stylesheet" href="all.min.css" >
 </head>
 <body>
 	<div class="flowtime">
 		<div class="ft-section section-1" data-id="section-1">
 			<div id="/section-1/page-1" class="ft-page page-1" data-id="page-1">
-				<p class="text1"><span id="text-75" contenteditable="true">XX</span> ❤ <span id="text-76" contenteditable="true">XX</span> <span id="text-77" contenteditable="true">一生一世</span></p>
+				<p class="text1"><span id="text-75" contenteditable="true">常志伟</span> ❤ <span id="text-76" contenteditable="true">姬蔚萍</span> <span id="text-77" contenteditable="true">一生一世</span></p>
 				<p class="text2">按键盘 "↓" <span id="text-78" contenteditable="true">开始倾听工科男的浪漫表白</span></p>
 			</div>
 			<div id="/section-1/page-2" class="ft-page page-2" data-id="page-2">
