--- a/index.htm
+++ b/index.htm
@@ -95,7 +95,7 @@
 				<img src="img/iali66.jpg" tppabs="img/iali66.jpg" />
 			</div>
 			<div id="/section-3/page-7" class="ft-page page-17 top-text" data-id="page-7">
-				<h3 id="text-19" contenteditable="true">直到有一天常志伟与相遇了</h3>
+				<h3 id="text-19" contenteditable="true">直到有一天常志伟与姬蔚萍相遇了</h3>
 				<img src="img/iali16.jpg" tppabs="img/iali16.jpg" />
 			</div>
 		</div>
@@ -204,7 +204,7 @@
 				<h3 id="text-46" contenteditable="true"> 常志伟又怎会飞的更高更远</h3>
 			</div>
 			<div id="/section-7/page-4" class="ft-page page-42" data-id="page-4">
-				<h3><span id="text-47" contenteditable="true">常志伟不想这样。他要为姬蔚萍改变自己</span><br /><span id="text-48" contenteditable="true">常志伟不知道姬蔚萍喜欢什么，但他一定会满足她的一切。</span></h3>
+				<h3><span id="text-47" contenteditable="true">常志伟不想这样，他要为姬蔚萍改变自己</span><br /><span id="text-48" contenteditable="true">常志伟不知道姬蔚萍喜欢什么，但他一定会满足她的一切</span></h3>
 				<img src="img/iali69.jpg" tppabs="img/iali69.jpg"  />
 			</div>
 			<div id="/section-7/page-5" class="ft-page page-43" data-id="page-5">
@@ -280,8 +280,8 @@
 			<div id="/section-9/page-4" class="ft-page page-55 right-img" data-id="page-4">
 				<img src="img/14915.jpg" tppabs="img/14915.jpg" />
 				<p class="text">
-					<span id="text-73" contenteditable="true">我相信，常志伟和姬蔚萍的故事会一直继续下去。</span><br />
-					<span id="text-74" contenteditable="true">无论精彩、平淡都会是他们喜欢的。</span><br />
+					<span id="text-73" contenteditable="true">我相信，常志伟和姬蔚萍的故事会一直继续下去</span><br />
+					<span id="text-74" contenteditable="true">无论精彩、平淡都会是他们喜欢的</span><br />
                     <span id="text-74" contenteditable="true">姬蔚萍，我爱你！！！</span><br />
 					<br />
 					<br />
