--- a/index.htm
+++ b/index.htm
@@ -278,7 +278,7 @@
 				<div class="center-img">I love you</div>
 			</div>
 			<div id="/section-9/page-4" class="ft-page page-55 right-img" data-id="page-4">
-				<img src="img/jwp.jpg" tppabs="img/jwp.jpg" />
+				<img src="img/jwp520.jpg" tppabs="img/jwp520.jpg" />
 				<p class="text">
 					<span id="text-73" contenteditable="true">我相信，常志伟和姬蔚萍的故事会一直继续下去</span><br />
 					<span id="text-74" contenteditable="true">无论精彩、平淡都会是他们喜欢的</span><br />
